# acpp

./: .clang-format  .gitignore  CMakeLists.txt  check.ps1  init.lua  nvimsc.txt
TTT/: init.lua
practice/donut/: donut.cpp  donut.sln
practice/learncpp/: learn.cpp
practice/msvc/: msvc.sln  msvc.vcxproj  msvc.vcxproj.filters
practice/msvc/msvc/x64/Debug/: msvc.exe.recipe  msvc.ilk  vc143.idb
practice/msvc/msvc/x64/Debug/msvc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  msvc.lastbuildstate
practice/raytracer/: main.cpp  raytracer.sln  raytracer.vcxproj
practice/raytracer/raytracer/x64/Debug/: raytracer.exe.recipe  raytracer.ilk  vc143.idb
practice/raytracer/raytracer/x64/Debug/raytracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  raytracer.lastbuildstate
